# integrations

./: .editorconfig  .gitattributes  .gitignore  .licensure.yml  .tool-versions  BUILD.bazel  Cargo.toml  DEVELOPMENT.md  MODULE.bazel  README.md  bitsnap-integrations.code-workspace  cliff.toml  rust-toolchain
.github/: dependabot.yml
integrations-macro/: Cargo.toml
integrations-shared/: Cargo.toml
integrations-shared/src/: lib.rs
integrations-shared/src/codegen/: enums.rs  mod.rs  structs.rs
integrations-shared/src/codegen/testdata/: test_basic_struct.golden  test_bool_enum_to_string.golden  test_dec_enum_to_string.golden  test_enum_with_default_to_string.golden  test_number_enum_to_string.golden  test_string_enum_to_string.golden  test_struct_to_string.golden  test_struct_with_collections.golden  test_struct_with_defaults_to_string.golden  test_struct_with_enum_validation.golden  test_struct_with_full_defaults.golden  test_struct_with_numeric_enum_validation.golden  test_struct_with_partial_defaults.golden  test_struct_with_validation.golden
integrations-shared/src/http/: client.rs  mod.rs
integrations/accounting-chargebee/macro/: Cargo.toml  README.md  build.rs
integrations/accounting-chargebee/macro/src/: lib.rs
integrations/accounting-freshbooks/: Cargo.toml  README.md
integrations/accounting-freshbooks/macro/: Cargo.toml  README.md  build.rs
integrations/accounting-freshbooks/old/codegen/: main.go
integrations/accounting-freshbooks/old/codegen/client/: bill_payments.go  bill_vendors.go  bills.go  clients.go  credit_notes.go  estimates.go  expenses.go  invoice_profiles.go  invoices.go  items.go  other_incomes.go  payment_options.go  payments.go  projects.go  services.go  staff.go  tasks.go  taxes.go  team_members.go  time_entries.go
integrations/accounting-freshbooks/old/codegen/templates/: client_suite_test.go  list.go  list_test.go  model.go  model.go.tpl  model_test.go  retrieve.go  retrieve_test.go
integrations/accounting-freshbooks/old/freshbooks/client/: client.go
integrations/accounting-freshbooks/old/macro/src/: create.rs  delete.rs  lib.rs  list_of.rs  models.rs  update.rs
integrations/accounting-freshbooks/old/src/: lib.rs  models.rs
integrations/accounting-freshbooks/old/src/models/: bill_attachment.rs  bill_vendor_tax_defaults.rs  credit_note.rs  estimate_line.rs  invoice_presentation.rs  other_income_note.rs  other_income_taxes.rs  project_group.rs  project_member.rs  project_service.rs
integrations/accounting-myob/: Cargo.toml  README.md
integrations/accounting-myob/macro/: Cargo.toml  README.md  _build.rs
integrations/accounting-myob/old/codegen/: main.go
integrations/accounting-myob/old/codegen/client/: account_right.go  account_right_info.go  company.go  contact.go  contact_photo.go  current_user.go
integrations/accounting-myob/old/macro/: Cargo.toml
integrations/accounting-myob/old/src/: models.rs
integrations/accounting-paypal/: Cargo.toml  README.md
integrations/accounting-paypal/old/macro/: Cargo.toml  build.rs
integrations/accounting-paypal/old/src/: models.rs
integrations/accounting-qbo/: Cargo.toml  README.md
integrations/accounting-qbo/macro/: Cargo.toml  README.md  _build.rs
integrations/accounting-qbo/old/macro/: Cargo.toml
integrations/accounting-qbo/old/src/: models.rs
integrations/accounting-xero/: Cargo.toml  README.md
integrations/accounting-xero/macro/: Cargo.toml  README.md  _build.rs
integrations/accounting-xero/old/src/: models.rs
integrations/accounting-zoho-books/: Cargo.toml  README.md
integrations/accounting-zoho-books/macro/: README.md
integrations/accounting-zoho-books/old/macro/: Cargo.toml  build.rs
integrations/accounting-zoho-books/old/src/: models.rs
integrations/customer-salesforce/: Cargo.toml  README.md
integrations/customer-salesforce/macro/: README.md
integrations/customer-salesforce/old/macro/: Cargo.toml
integrations/customer-salesforce/old/src/: models.rs
integrations/customer-surveymonkey/: Cargo.toml  README.md
integrations/customer-surveymonkey/macro/: Cargo.toml
integrations/customer-surveymonkey/old/macro/: README.md
integrations/customer-surveymonkey/old/src/: enums.rs
integrations/customer-zoho-crm/: Cargo.toml  README.md
integrations/customer-zoho-crm/macro/: README.md
integrations/customer-zoho-crm/old/macro/: Cargo.toml
integrations/customer-zoho-crm/old/src/: models.rs
integrations/data-postgresql/: Cargo.toml  README.md
integrations/data-postgresql/macro/: Cargo.toml
integrations/hr-deel/: Cargo.toml  README.md
integrations/hr-deel/macro/: Cargo.toml  README.md
integrations/hr-deel/old/src/: models.rs
integrations/hr-workday/macro/: Cargo.toml  README.md
integrations/marketing-active-campaign/: Cargo.toml  README.md
integrations/marketing-active-campaign/macro/: Cargo.toml
integrations/marketing-active-campaign/old/macro/: README.md
integrations/marketing-freshdesk/: Cargo.toml  README.md
integrations/marketing-freshdesk/macro/: Cargo.toml  README.md
integrations/marketing-gainsight/: Cargo.toml  README.md
integrations/marketing-gainsight/macro/: Cargo.toml
integrations/marketing-gainsight/old/src/: models.rs
integrations/marketing-gatherup/: Cargo.toml  README.md
integrations/marketing-gatherup/macro/: Cargo.toml
integrations/marketing-gatherup/old/src/: models.rs
integrations/marketing-google/: Cargo.toml  README.md
integrations/marketing-google/macro/: Cargo.toml
integrations/marketing-google/src/: lib.rs
integrations/observability-grafana/: Cargo.toml  README.md
integrations/observability-grafana/macro/: Cargo.toml
integrations/observability-opentelemetry/: Cargo.toml  README.md
integrations/observability-opentelemetry/macro/: Cargo.toml
integrations/observability-prometheus/: Cargo.toml  README.md
integrations/observability-prometheus/macro/: Cargo.toml
integrations/observability-pyroscope/: Cargo.toml  README.md
integrations/observability-pyroscope/macro/: Cargo.toml
integrations/repo-git/: Cargo.toml  README.md
integrations/repo-git/macro/: Cargo.toml
(+492 files in other folders)
