cargo-features = ["codegen-backend", "profile-rustflags"]

[workspace]
resolver = "2"
members = [
  "integrations-macro",
  "integrations-shared",
  "integrations/accounting-*",
  "integrations/customer-*",
  "integrations/data-*",
  "integrations/hr-*",
  "integrations/marketing-*",
  "integrations/observability-*",
  "integrations/repo-*",
]

[workspace.package]
authors = ["Yuriy Yarosh <yuriy@yarosh.dev>"]
license = "MPL-2.0"
repository = "https://github.com/bitsnap/integrations"
documentation = "https://bitsnap.io/integrations"
edition = "2024"
rust-version = "1.89.0"
publish = false

[workspace.dependencies]
bitsnap_integrations_shared = { path = './integrations-shared' }
bitsnap_integrations_macro = { path = './integrations-macro' }

# Async
tokio = "^1.46"
futures = "^0.3"

# Http
hyper = "1"
http-body-util = "^0.1"
hyper-util = "^0.1"
hyper-rustls = "^0.27"
rustls = "^0.23"

# Time
chrono = "^0.4"

# Data
serde = "1.0"
serde_json = "^1.0"
bincode = "^2.0"
serde_valid = "^1.0"
bigdecimal = "^0.4"

strum = "^0.27"
strum_macros = "^0.27"

# Testing
goldie = "^0.5"
tempfile = "3.10.1"

# Errors
thiserror = "^2.0"
anyhow = "^1.0"

# Init
once_cell = "1.19.0"

# Marco
quote = "^1.0"
syn = "^2.0"
scraper = "^0.23"
proc-macro2 = "^1.0"
prettyplease = "0.2"

[workspace.lints.rust]
unsafe_code = "forbid"
unsafe_op_in_unsafe_fn = "forbid"

[profile.dev]
lto = false
panic = "abort"
debug-assertions = true
overflow-checks = true
opt-level = 0
incremental = true
codegen-backend = "llvm"
rustflags = ["-Zshare-generics=y"]

[profile.release]
lto = true
panic = "abort"
debug-assertions = false
overflow-checks = true
opt-level = 3
incremental = true
codegen-backend = "llvm"
rustflags = ["-Zshare-generics=y"]
