[package]
name = "bitsnap_integrations_shared"
description = "bitsnap integrations shared lib"
version = "0.0.1"

authors.workspace = true
documentation.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true
publish = false

[lib]
crate-type = ["rlib"]

[dependencies]
quote.workspace = true
syn.workspace = true
proc-macro2.workspace = true

[dev-dependencies]
goldie.workspace = true

[lints]
workspace = true
