[package]
name = "bitsnap_integrations_shared"
description = "bitsnap integrations shared lib"
version = "0.1.0"

authors.workspace = true
documentation.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true
publish = false

[lib]
crate-type = ["rlib"]

[dependencies]
tokio = { workspace = true, features = ["full"] }

# Data
bincode = { workspace = true }
bigdecimal = { workspace = true }

# Codegen
quote.workspace = true
syn = { workspace = true, features = ["full"] }
prettyplease.workspace = true
proc-macro2.workspace = true

# Http
hyper = { workspace = true, features = ["client", "http1", "http2"] }
http-body-util.workspace = true
hyper-util = { workspace = true, features = ["http2", "client", "client-legacy"] }
hyper-rustls = { workspace = true, features = ["http1", "http2"] }
rustls.workspace = true

# Logging
log.workspace = true

# Errors
thiserror.workspace = true
anyhow.workspace = true

# Init
once_cell.workspace = true

[dev-dependencies]
goldie.workspace = true
tempfile.workspace = true

[features]
disable-online-tests = []

[lints]
workspace = true
