[package]
name = "bitsnap_accounting_myob"
description = "bitsnap myob integration"
documentation = "https://bitsnap.io/integrations/myob"
version = "0.0.1"

authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true
publish = false

[lib]
crate-type = ["rlib"]

[dependencies]
bitsnap_accounting_myob_macro = { path = "macro" }

tokio.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_valid.workspace = true
bigdecimal.workspace = true
strum.workspace = true
strum_macros.workspace = true

[dev-dependencies]
goldie.workspace = true

[lints]
workspace = true
