[package]
name = "bitsnap_accounting_paypal"
description = "bitsnap paypal integration"
version = "0.0.1"
authors.workspace = true
documentation = "https://bitsnap.io/documentation/"
rust-version.workspace = true
edition.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
tokio = "^1.46"
chrono = "^0.4"
serde = "^1.0"
serde_json = "^1.0"
serde_valid = "^1.0"
bigdecimal = "^0.4"
strum = "^0.27"
strum_macros = "^0.27"

[dev-dependencies]
goldie = "*"

[lints]
workspace = true
