[package]
name = "bitsnap_accounting_paypal"
description = "bitsnap paypal integration"
documentation = "https://bitsnap.io/integrations/paypal"
version = "0.0.1"

authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true
publish = false

[lib]
crate-type = ["rlib"]

[dependencies]
tokio = "^1.46"
chrono = "^0.4"
serde = "^1.0"
serde_json = "^1.0"
serde_valid = "^2.0"
bigdecimal = "^0.4"
strum = "^0.27"
strum_macros = "^0.27"

[dev-dependencies]
goldie = "*"

[lints]
workspace = true
