[package]
name = "bitsnap_accounting_zoho_books"
description = "bitsnap zoho books integration"
version = "0.0.1"
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://bitsnap.io/integrations/zoho-books"
rust-version.workspace = true
edition.workspace = true
publish = false

[lib]
crate-type = ["rlib"]

[dependencies]
tokio = "*"
chrono = "*"
serde = "*"
serde_json = "*"
serde_valid = "*"
bigdecimal = "*"
strum_macros = "*"
strum = "*"

[dev-dependencies]
goldie = "*"

[lints]
workspace = true
