[package]
name = "bitsnap_feedback_surveymonkey"
description = "bitsnap surveymonkey integration"
version = "0.0.1"
authors.workspace = true
license.workspace = true
documentation = "https://bitsnap.io/integrations/surveymonkey"
repository.workspace = true
rust-version.workspace = true
edition.workspace = true
publish = false

[lib]
crate-type = ["rlib"]

[dependencies]
tokio = "*"
chrono = "*"
serde = "*"
serde_json = "*"
serde_valid = "*"
bigdecimal = "*"
strum_macros = "*"
strum = "*"

[dev-dependencies]
goldie = "*"

[lints.rust]
unsafe_code = "forbid"
unsafe_op_in_unsafe_fn = "forbid"

