[package]
name = "bitsnap_integration_postgresql"
description = "Bitsnap PostgreSQL MCP server"
version = "0.0.1"
authors.workspace = true
license.workspace = true
documentation = "https://bitsnap.io/integrations/postgresql"
repository.workspace = true
rust-version.workspace = true
edition.workspace = true
publish = false

[lib]
crate-type = ['rlib']

[dependencies]
anyhow = "*"

[dev-dependencies]
goldie = "*"

[lints]
workspace = true
