[package]
name = "bitsnap_hr_deel"
description = "bitsnap deel integration"
version = "0.0.1"
authors.workspace = true
license.workspace = true
documentation = "https://bitsnap.io/integrations/deel"
repository.workspace = true
rust-version.workspace = true
edition.workspace = true
publish = false

[lib]
crate-type = ["rlib"]

[dependencies]
tokio = "*"
chrono = "*"
serde = "*"
serde_json = "*"
serde_valid = "*"
bigdecimal = "*"
strum_macros = "*"
strum = "*"

[dev-dependencies]
goldie = "*"

[lints]
workspace = true
