[package]
name = "bitsnap_crm_gainsight"
description = "bitsnap gainsight integration"
version = "0.0.1"
authors.workspace = true
documentation = "https://bitsnap.io/documentation/"
rust-version.workspace = true
edition.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
tokio = "*"
chrono = "*"
serde = "*"
serde_json = "*"
serde_valid = "*"
bigdecimal = "*"
strum_macros = "*"
strum = "*"

[lints]
workspace = true
