[package]
name = "bitsnap_integration_google_marketing"
description = "Bitsnap Google Marketing Integration"
version = "0.0.1"
authors.workspace = true
license.workspace = true
repository = "https://github.com/bitsnap/integration-marketing-google"
documentation = "https://bitsnap.io/documentation/google"
rust-version.workspace = true
edition.workspace = true
publish = false

[lib]
crate-type = ['rlib']

[dependencies]
anyhow = "*"

[dev-dependencies]
goldie = "*"

[lints]
workspace = true
