[package]
name = "bitsnap_integration_grafana"
description = "Bitsnap Grafana Integration"
version = "0.0.1"
authors.workspace = true
license.workspace = true
repository = "https://github.com/bitsnap/integration-observability-grafana"
documentation = "https://bitsnap.io/documentation/grafana"
rust-version.workspace = true
edition.workspace = true
publish = false

[lib]
crate-type = ['rlib']

[dependencies]
anyhow = "*"

[dev-dependencies]
goldie = "*"

[lints]
workspace = true
