[package]
name = "bitsnap_integration_prometheus"
description = "Bitsnap Prometheus integration"
version = "0.0.1"
authors.workspace = true
license.workspace = true
repository = "https://github.com/bitsnap/integration-observability-prometheus"
documentation = "https://bitsnap.io/documentation/prometheus"
rust-version.workspace = true
edition.workspace = true
publish = false

[lib]
crate-type = ['rlib']

[dependencies]
anyhow = "*"

[dev-dependencies]
goldie = "*"

[lints]
workspace = true
