[package]
name = "bitsnap_integration_repo_git"
description = "Bitsnap Git integration"
version = "0.0.1"
authors.workspace = true
documentation = "https://bitsnap.io/documentation/"
rust-version.workspace = true
edition.workspace = true
publish = false

[lib]
crate-type = ['rlib']

[dependencies]
anyhow = "*"

[dev-dependencies]
goldie = "*"

[lints]
workspace = true
