[package]
name = "bitsnap_accounting_chargebee_macro"
description = "bitsnap chargebee codegen macro"
version = "0.0.1"
authors.workspace = true
documentation = "https://bitsnap.io/documentation/"
rust-version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "chargebee_codegen"

[lib]
proc-macro = true

# Dependencies for the proc-macro library
[dependencies]
quote.workspace = true
syn.workspace = true
proc-macro2.workspace = true

[dev-dependencies]
goldie.workspace = true

# Dependencies specifically for the binary target
[target.'cfg(not(lib))'.dependencies]
tokio.workspace = true
futures.workspace = true
scraper.workspace = true
anyhow.workspace = true

[build-dependencies]
tokio.workspace = true
futures.workspace = true
scraper.workspace = true
anyhow.workspace = true

[lints]
workspace = true
