[package]
name = "bitsnap_accounting_chargebee_macro"
description = "bitsnap chargebee codegen macro"
version = "0.0.1"
authors.workspace = true
documentation = "https://bitsnap.io/documentation/"
rust-version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "chargebee_codegen"

[lib]
proc-macro = true

# Dependencies for the proc-macro library
[dependencies]
bitsnap_integrations_shared.workspace = true
quote.workspace = true
syn.workspace = true
proc-macro2.workspace = true

[dev-dependencies]
goldie.workspace = true

# Dependencies specifically for the binary target
[target.'cfg(not(lib))'.dependencies]
bitsnap_integrations_shared.workspace = true
tokio.workspace = true
hyper-util.workspace = true
futures.workspace = true
scraper.workspace = true
anyhow.workspace = true
itertools.workspace = true

# Executing the parsing binary in build.rs
# Dependencies for the build script should be the same as for the binary target
[build-dependencies]
bitsnap_integrations_shared.workspace = true
tokio.workspace = true
hyper-util.workspace = true
futures.workspace = true
scraper.workspace = true
anyhow.workspace = true
itertools.workspace = true

[lints]
workspace = true
