[package]
name = "bitsnap_hr_workday_macro"
description = "bitsnap workday integration macro"
version = "0.0.1"
authors.workspace = true
license.workspace = true
repository = "https://github.com/bitsnap/integration-hr-workday"
documentation = "https://bitsnap.io/documentation/workday"
rust-version.workspace = true
edition.workspace = true
publish = false

[lib]
crate-type = ["rlib"]

[dependencies]
tokio = "*"
chrono = "*"
serde = "*"
serde_json = "*"
serde_valid = "*"
bigdecimal = "*"
strum_macros = "*"
strum = "*"

[dev-dependencies]
goldie = "*"

[lints.rust]
unsafe_code = "forbid"
unsafe_op_in_unsafe_fn = "forbid"
